Viewing of Data OK

--- a/public/css/_sidebar.scss
+++ b/public/css/_sidebar.scss
@@ -76,7 +76,8 @@
         font-size: 15px;
     }
     .li-navs li a:hover{
-        background: linear-gradient(to right, #0f8a80, #11d45c);
+        background: -webkit-linear-gradient(to right, #373b44, #4286f4); /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #373b44, #4286f4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         border-radius:8px;
     }
     .custom-caret{
