--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,7 @@
 
 .login-form .card {
   margin: 0 auto;
-  margin-top: 40px;
+  margin-top: 100px;
   width: 40%;
 }
 
@@ -182,8 +182,10 @@
 }
 
 #sidebar .li-navs li a:hover {
-  background: -webkit-gradient(linear, left top, right top, from(#0f8a80), to(#11d45c));
-  background: linear-gradient(to right, #0f8a80, #11d45c);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, right top, from(#373b44), to(#4286f4));
+  background: linear-gradient(to right, #373b44, #4286f4);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   border-radius: 8px;
 }
 
