--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -8,6 +8,11 @@ body
     margin:0;
   //  overflow: hidden;
 }
+.paginate_button:hover{
+  border:none!important;
+  background:transparent!important;
+}
+
 
 
 
