--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,4 +263,9 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.paginate_button:hover {
+  border: none !important;
+  background: transparent !important;
+}
 /*# sourceMappingURL=style.css.map */
